First commit of all exercise files

--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,19 +1,22 @@
 <div class="container">
+  <page-title></page-title>
     <div class="row justify-content-center">
-      <div class="col-3">
+      <div class="col-3" id="firstCol">
         <movie-list></movie-list>
       </div>
   
-      <div class="col-3">
-        <p>No content here yet...</p>
+      <div class="col-3" id="secondCol">
+        <fav-photos></fav-photos>
       </div>
   
       <div class="col-3">
-        <p>No content here yet...</p>
+        <chores-list></chores-list>
       </div>
     </div>
   </div>
+  <hr/>
+  <fav-links></fav-links>
   
-  <chores-list></chores-list>
   
-  <fav-photos></fav-photos>
+  
+  
