--- a/lesson3/examples/src/app/skill-set/skill-set.component.css
+++ b/lesson3/examples/src/app/skill-set/skill-set.component.css
@@ -3,6 +3,17 @@ h3 {
    text-decoration: underline;
 }
 
+.p-style{
+   text-align:right;
+   color:darkorange;
+}
+
 .skills {
    color: green;
+}
+
+.ol-style {
+   color: black;
+   text-align: center;
+   list-style-type: upper-roman;
 }
